# lidar-sim

./: .gitignore  README.md
Cpp-ldr/: CMakeLists.txt  body.cpp  body.h  helpers.cpp  helpers.h  lidar.cpp  lidar.h  main.cpp
MATLAB/: graphicDemo.m  hatchbackData.mat
MATLAB/+ldr/: VLP16parameters.m  areInPolygon.m  invAffine.m  isValidPolygon.m  orderedColumn2Image.m  ptcldCols2Image.m  spher2Cart.m
MATLAB/+ldr/@lidar/: lidar.m  plot.m  scanTarget.m
MATLAB/+ldr/@target/: castRaysUpon.m  changeCoords.m  plot.m  target.m
MATLAB/+ldr/@world/: capturePtClds.m  initScene.m  updateVehicle.m  world.m
Python/: VisionSensorsModule.py
Python/renderings/: readme.txt
coords/: hatchback_triangles_vehcoords.txt
renderings/: test_cpp_save.txt
